theme improvements, meetup & blog layouts

--- a/404.md
+++ b/404.md
@@ -1,7 +1,7 @@
 ---
 layout: "page"
 title: "404 and it's gone"
-subtitle: "The file was just here...and it's gone!"
+subtitle: "The file was just here...anddd it's gone!"
 background: "#464646"
 permalink: "/404.html"
 ---
