--- a/_posts/2015-05-23-hackcoin.md
+++ b/_posts/2015-05-23-hackcoin.md
@@ -12,8 +12,8 @@ published: true
 
 ## Hackcoin, Hong Kong's first Blockchain Hackathon
 
-Hackco.in, the successful Blockchain Hackathon is coming to Hong Kong! Organized by Merkle Tree Limited together with the Bitcoin Association of Hong Kong the hackathon provides 30 individuals with the opportunity to hack together any cool application, business plan, art project or research paper. 
+Hackco.in, the successful Blockchain Hackathon is coming to Hong Kong! Organized by Merkle Tree Limited together with the Bitcoin Association of Hong Kong the hackathon provides 30 individuals with the opportunity to hack together any cool application, business plan, art project or research paper.
 
 See [hackco.in/hong-kong](http://hackco.in/hong-kong/) for more information [and register here](http://www.eventbrite.hk/e/hack-coin-hong-kong-tickets-16576685312)
 
-Update May 17: (Courtesey of Antminer we will be able to give out 10 bitcoin miners at the hackathon!](/2015-hackcoin-bitmain/)
+Update May 17: [Courtesey of Antminer we will be able to give out 10 bitcoin miners at the hackathon!](/2015-hackcoin-bitmain/)
