--- a/_posts/2015-05-23-hackcoin.md
+++ b/_posts/2015-05-23-hackcoin.md
@@ -16,4 +16,4 @@ Hackco.in, the successful Blockchain Hackathon is coming to Hong Kong! Organized
 
 See [hackco.in/hong-kong](http://hackco.in/hong-kong/) for more information [and register here](http://www.eventbrite.hk/e/hack-coin-hong-kong-tickets-16576685312)
 
-Update May 17: (Courtesey of Antminer we will be able to give out 10 bitcoin miners at the hackathon!](/2015-hackcoin-bitmain/)
+Update May 17: [Courtesey of Antminer we will be able to give out 10 bitcoin miners at the hackathon!](/2015-hackcoin-bitmain/)
