--- a/_posts/2017-05-11-gs-forks.md
+++ b/_posts/2017-05-11-gs-forks.md
@@ -22,6 +22,12 @@ o upgrade a blockchain is hard, everyone has to agree on the new set of rules, o
 
 This is a free event.
 
+Thank you for coming! You can find the slides here:
+
+[Leonhard Weese](/media/2017/05/Forks_Weese.pdf)
+
+[Jonathan Bier](/media/2017/05/Forks_Bier.pdf)
+
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2195.198226642313!2d114.15600861948438!3d22.28296531969345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34040064a09d4adf%3A0x12681b7f2253e855!2sGarage+Society+DVR!5e0!3m2!1sen!2s!4v1493903938500" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 [![Garage Society](/media/2017/05/garagesociety.png)](http://www.thegaragesociety.com/)
