add ico events and slides

--- a/_posts/2017-05-11-gs-forks.md
+++ b/_posts/2017-05-11-gs-forks.md
@@ -18,7 +18,7 @@ Location: Garage Society, 9/F, **33 Des Voeux Road Central, Central**, Hong Kong
 
 Speaker: **Leo Weese**
 
-o upgrade a blockchain is hard, everyone has to agree on the new set of rules, or else the network risks to split into two. This talk explains the variety of upgrade mechanisms that exist, their advantages and disadvantages, as well as what risk they bring to miners and users in both the Bitcoin and Ethereum networks.
+To upgrade a blockchain is hard, everyone has to agree on the new set of rules, or else the network risks to split into two. This talk explains the variety of upgrade mechanisms that exist, their advantages and disadvantages, as well as what risk they bring to miners and users in both the Bitcoin and Ethereum networks.
 
 This is a free event.
 
