--- a/_posts/2017-06-08-gs-icos.md
+++ b/_posts/2017-06-08-gs-icos.md
@@ -24,6 +24,7 @@ Panelists:
 
 **Adam Vaziri**, Director, Diacle 
 
+**Gavin Yeung**, Founder, Cryptomover
 
 
 Initial Coin Offerings (ICOs) are enabled by smart contracts, usually on the Ethereum blockchain. Tokens are often sold prior to any software development with the expectation that the token will later be needed to use the product. Some projects have raised millions in a few minutes, while other reached multi-billion dollar evaluations in post-ICO trading, racketing up big profits for the early investors despite any projects being built. Their legality in the context of securities law has yet to be determined.
