--- a/crypto-career/2018.md
+++ b/crypto-career/2018.md
@@ -5,8 +5,12 @@ caption: "Always Hiring"
 subtitle: "Develop your career in Blockchain and Cryptocurrencies"
 icon: "user"
 background: "url(/media/2015/12/hk.png) #FF0000"
-permalink: "/scaling-bitcoin-2015/live/"
+permalink: "/crypto-career/2018"
 navigation: "visible"
+redirect_from:
+  - /crypto-career/
+  - /cryptocareer/
+
 ---
 
 # Crypto Career Day 2018
