fix layout conflicts

--- a/corporate/_posts/2018-03-23-edge.markdown
+++ b/corporate/_posts/2018-03-23-edge.markdown
@@ -4,6 +4,7 @@ name: edge
 subtitle: Position
 modal-id: 1
 thumbnail: edge_thumb.png
+layout: members
 alt: Edge Wallet Logo
 link: https://edge.app/
 ---
