--- a/corporate/_posts/2018-08-07-etoro.markdown
+++ b/corporate/_posts/2018-08-07-etoro.markdown
@@ -4,6 +4,7 @@ name: etoro
 subtitle: Position
 modal-id: 1
 thumbnail: etoro_thumb.png
+layout: members
 alt: eToro logo
 link: https://www.etoro.com/
 ---
