--- a/corporate/_posts/2018-09-19-salg.markdown
+++ b/corporate/_posts/2018-09-19-salg.markdown
@@ -4,6 +4,7 @@ name: salg
 subtitle: Position
 modal-id: 1
 thumbnail: salg_thumb.png
+layout: members
 alt: SALG logo
 link: https://www.salg.cc/
 ---
